feat: update reservation
